--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -61,7 +61,7 @@ The items on this list could be recommendations. They are only a few of them: fi
 include_graphics('figure/1_shopping.png')
 ```
 
-In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). While they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplify a transformation in forms of ordering, a transformation that may affect the ontological texture of the world in the same way that commodification does. In its re-writing of the list, the recommender system effects a conversion experience in which individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things all come into play.   ing a major contemporary form of ordering, the recommendation list, that we see in many  forms of news, media, entertainment, marketing, advertising. 
+In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). While they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplify a transformation in forms of ordering, a transformation that may affect the ontological texture of the world in the same way that commodification does. In its re-writing of the list, the recommender system effects a conversion experience in which individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things all come into play.   A major contemporary form of ordering, the recommendation list, that we see in many  forms of news, media, entertainment, marketing, advertising, can be seen as what the philosopher of science Karl Popper called  a 'crystallisation of propensities' [@Popper_1990, 18].  
 
 The presentation I saw was not really surprising or exceptional. It was a presentation by a data scientist to data scientists, describing an implementation of a predictive model as well as some of the problems and potentials of the predictive model.  I see the presentation itself as providing materials for an argument about our experience of predictive ordering. In this paper, I re-present the presentation using a mixture of theoretical and practical resources. The theory is largely recent media theory and its accounts of prediction in media. The practical resources are that of coding and predictive models.[^12]
 
@@ -262,31 +262,13 @@ How does the DunnHumby model deal with the micrological propensities of things? 
 
 Whereas the association rule-based recommender system focused on thing-thing complementarities -- if you buy bread, you might want milk, if you buy beer, you might want diapers -- the substitutions look for micrological propensities that relate to gradations of preference, and variations in time and place.  Micrological propensities in the list relate to a particular time and place, amidst a continuously differentiable pathways between things.
 
-How could the recommender system sense the possible substitutions and complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries might be shaped by wider social groups, orderings and circumstances?  Patel's comments on this were very brief but suggest that the 'Have You Forgotten?' list becomes an increasingly mutable entity, open to many substitutions and intensive re-writings. Like the mention of `hadoop`, what Patel said about substitution and complementarity draws on extensive but relatively well-established data practices. She mentioned,  for instance,  a 'design matrix of 14,000 columns' and the use of '`L1 regularization` to drive coefficients down to zero' in a new feature of the model called 'self-learning substitutes,' a model that examines the recommendation list and predicts substitutes and complementarities for 'all products' in the list. The 'self learning substitutes' feature of the relevancy model draws on another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response').   What is being modelled here? No longer whether to recommend a product to a customer or not, but whether something could be substitute or complement  what is already in the recommendation list.
-HERE
-```{r biscuits, echo=FALSE, cache=TRUE, fig.margin=TRUE}
-    library(readr)
-    library(knitr)
-    bisc = read_tsv('data/biscuits.csv')
-    kable(bisc[order(bisc$price, decreasing=TRUE)[1:30], c('name','price')])
-```
+How could the recommender system sense the possible substitutions and complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries might be shaped by wider social groups, orderings and circumstances?  Patel's comments on this were very brief but suggest that the 'Have You Forgotten?' list becomes an increasingly mutable entity, open to many substitutions and intensive re-writings. Like the mention of `hadoop`, what Patel said about substitution and complementarity draws on extensive but relatively well-established data practices. She mentioned,  for instance,  a 'design matrix of 14,000 columns' and the use of '`L1 regularization` to drive coefficients down to zero' in a new feature of the model called 'self-learning substitutes,' a model that examines the recommendation list and predicts substitutes and complementarities for 'all products' in the list. The 'self learning substitutes' feature of the relevancy model draws on another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response'). A customer's recommendation list might already include `Tesco Ginger Nuts 300g.`   The 'self-learning substitution model' might be able to substitute something in that list that is of higher value, either because it is bigger or more expensive: `Mcvitie's Ginger Moments 400g.` What is being modelled here? No longer whether to recommend a product to a customer or not, but whether something could be substitute or complement  what is already in the recommendation list.
 
-We can imagine this in terms of biscuits. A customer's recommendation list might already include `r bisc$name[10]`.  The 'self-learning substitution model' might be able to substitute something in that list that is of higher value, either because it is bigger or more expensive. 
-
- 
-## 13. Complementarity drives conversion 
-
-![propensity_matrix](figure/propensity_conversions.png)
-
-Similarly, to model the potential complementarities   between things entails a matrix of comparisons. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella.`
-
-How should we understand the effect of complementarity? Patel says that 'complementarity drives conversion.' That is, the matrix of similarities expressed as numerical associations between products best animates the conversion of recommendations into purchases.  
-
-In the similarity matrix, shaped by the history of past recommendations and purchases made by this customer, lie the propensities of things that Hansen (following Popper) attributes to the world. Karl Popper speaks of the future as a 'crystallization of propensities' [@Popper_1990,18]   
+Similarly, modelling complementarities between things for a particular person entails a matrix of comparisons. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella.` How should we understand the effect of complementarity? From the standpoint of selling more things, Patel emphasises that 'complementarity drives conversion.' Bringing the matrix of similarities expressed as numerical associations between products into the model improves the conversion of recommendations into purchases. From the standpoint of a social ordering that identifies people and things as propensities, complementarities suggest another possible outcome. What does it mean for our sense of social order if the relations between things shift in accordance with our experience of the world? At base, there is no ontological transformation here, but an inclusion of some part of the world into the model.    In the similarity matrix, shaped by the history of past recommendations and purchases made by this customer, the propensities of things drive down the surplus of sensibility associated with what people want.  
 
 ## Conclusion
 
-My investigation of lists has been centred around the transformation in their predictive underpinnings. How should we think about the list-making practices of these models, databases and computational infrastructures? Following Hansen, I have been suggesting that the predictive listing in the form of open-ended recommendation is symptomatic of changes in the distribution of media. The idea that media should no longer be considered as extensions or prostheses of human communication but the environmental situation in which different propensities play out is increasingly central to contemporary media theory. 
+In their intersection with mundane practices of ordering, recommender systems offer some guidance to the ways that predictive practices affect existing  forms of social order in the world. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of contingencies and conditionalities, warping over time.  HERE Following Hansen, I have been suggesting that the predictive listing in the form of open-ended recommendation is symptomatic of changes in social order. The idea that media should no longer be considered as extensions or prostheses of human communication but the environmental situation in which different propensities play out is increasingly central to contemporary media theory. 
 
 Hansen refers to an ontological transformation in which predictive media or recommender systems would be seen as the closed realisation of the actually open propensities of the world. By understanding the world in terms of propensities, he argues, we have a change to engage with contemporary predictive media. 
 
