--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -30,21 +30,23 @@ opts_chunk$set(cache=TRUE)
 ## Abstract
 
 
-This paper investigates practices of list-making associated with online grocery shopping at a  UK and global supermarket chain, Tesco. 
+This paper investigates practices of list-making associated with online grocery shopping at a UK-global supermarket chain, Tesco. 
 It reconstructs an account of how a recommender system suggests a small number of grocery items of personal relevance to each of the millions of online grocery shoppers. 
 The recommender system  aim to up-sell and cross-sell some of the 250,000 items in the supermarket's inventory. 
 I suggest that we can understand devices such as recommender systems as transformations or conversions of the temporal and agential fabric of the important social ordering device, the list.
-While all written lists mix past and future actions, actual and potential events, their predictive re-writing in recommender systems adds a new operational dynamic.
+While all written lists mix past and future actions, actual and potential events, their re-writing by recommender systems adds a new operational dynamic.
 The incompleteness of lists, their propensity to expand or change, becomes more important than their capacity to  enumerate or rank things. 
-The conversion of lists from finite to in-definite in recommender systems suggests we might need to re-conceptualise how we think about social order and structure in media cultures.  
+The conversion of lists from finite to in-definite in recommender systems suggests we might need to re-conceptualise how we think about social order and structure in media cultures. 
 
 ## 
  
-Online grocery shopping at Tesco, a large supermarket chain based in the UK, includes recommendations for further grocery purchases under the title of 'Have you forgotten?'. When customers shop for groceries online, a list of five recommendations appear  at the checkout stage. These recommendations are the product of a recommender system, an important category of operational device in big data (see for instance [@Striphas_2015] for analysis of Netflix recommendation; [@Morris_2015]  or [@Seaver_2015] for an account of music recommendations]).  The question 'have you forgotten?' is followed by some  grocery items that could have been or are usually on a shopping list. The title of the suggestions is a bit misleading: the recommender system, as we will see, is not concerned with forgetting, with the many slips and oversights associated with shopping lists,  but rather with items that you didn't know what should be on your list, perhaps because you have never thought of putting them there.
+Online grocery shopping at Tesco, a large supermarket chain based in the UK, includes recommendations for further grocery purchases under the title of 'Have you forgotten?'. When customers shop for groceries online, a list of five recommendations appear at the checkout stage. These recommendations are the product of a recommender system, an important category of operational device in big data (see for instance [@Striphas_2015] for analysis of Netflix recommendation; [@Morris_2015]  or [@Seaver_2015] for an account of music recommendations]).  The question 'have you forgotten?' is followed by some  grocery items that could have been or are usually on a shopping list. The title of the suggestions is a bit misleading: the recommender system, as we will see, is not concerned with forgetting, with the many slips and oversights associated with shopping lists,  but rather with items that you didn't know what should be on your list, perhaps because you have never thought of putting them there.
 
-The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Nielsen_TBA; @Tsing_2009] on logistics and power are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Nielsen_TBA; @Tsing_2009] on logistics and power)) Groceries display a geography of agriculture, industry, transport, communication and financialisation driven by flows of labour and capital. Encounters between this hyper-complex geography and people, even in the confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco. While there are many facets to shopping [@Miller_2013], the shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, is one intersectional ordering device. In a shopping trajectory (trawling along aisles packed with thousands of products, scrolling down screens or searching for particular brands amidst search results), lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities.
+The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Nielson_2012; @Tsing_2008] on logistics and power are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity).  Groceries imply a geography of agriculture, industry, transport, communication and financialisation driven by flows of labour and capital. Encounters between this hyper-complex geography and people, even in the confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco. While there are many facets to shopping [@Miller_2013], the shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, is one intersectional ordering device that configures a universe of possible references, and a teeming multitude of propensities, into a possible order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities.
 
-Hand-written shopping lists undoubtedly have ongoing importance and display interesting mixed ordering practices (see the list of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)), online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a commercially ordered geography of the world,  online shopping recommender systems generate lists that seek to align people to commodities they otherwise might have little relation to.  
+While hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the list of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)), online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a commercially-ordered geography of the world,  online shopping recommender systems generate lists that seek to align people to commodities they otherwise might have little relation to.  
+
+[HERE]
 
 ```{r random-basket, echo=FALSE, cache=TRUE, fig.cap='Random basket'}
 library(dplyr)
@@ -56,12 +58,12 @@ df = bind_rows(sapply(csvs, read_tsv))
 kable(sample_n(df, size=5)$name, col.names='item')
 ```
 
-The items on this list could be recommendations. They are only a few of them: five. The question: which five items and in what order?
+
 ```{r shopping-hand}
 include_graphics('figure/1_shopping.png')
 ```
 
-In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). While they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplify a transformation in forms of ordering, a transformation that may affect the ontological texture of the world in the same way that commodification does. In its re-writing of the list, the recommender system effects a conversion experience in which individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things all come into play.   A major contemporary form of ordering, the recommendation list, that we see in many  forms of news, media, entertainment, marketing, advertising, can be seen as what the philosopher of science Karl Popper called  a 'crystallisation of propensities' [@Popper_1990, 18].  
+The items on this list could be recommendations. They are only a few of them: five. The question is: which five items and in what order? In terms of content, there are many similarities between shopping lists such as Figure \@ref(fig:shopping-hand)  -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  --  and the five ranked items shown to a customer on an online shopping site (as shown in Table \@ref(tab:random-basket)). While they are similar in content,  the list of five suggestions shown to Tesco's online customers at the checkout  exemplify a transformation in forms of ordering, a transformation that may affect the ontological texture of the world in the same way that commodification does. In its re-writing of the list, the recommender system effects a conversion experience in which individualised desire, consumption practices, value-chains, infrastructural time-space dynamics, the lives of others and the propensities of things all come into play.   A major contemporary form of ordering, the recommendation list, that we see in many  forms of news, media, entertainment, marketing, advertising, can be seen as what the philosopher of science Karl Popper called  a 'crystallisation of propensities' [@Popper_1990, 18].
 
 The presentation I saw was not really surprising or exceptional. It was a presentation by a data scientist to data scientists, describing an implementation of a predictive model as well as some of the problems and potentials of the predictive model.  I see the presentation itself as providing materials for an argument about our experience of predictive ordering. In this paper, I re-present the presentation using a mixture of theoretical and practical resources. The theory is largely recent media theory and its accounts of prediction in media. The practical resources are that of coding and predictive models.[^12]
 
@@ -72,28 +74,28 @@ Despite being titled 'Have You Forgotten?' Tesco's recommender system does not s
 
 ## Lists in and as data 
 
-Lists have long interested historians, anthropologists, sociologists, literary and media theorists. If, as the social anthropologist Jack Goody argued, lists are historically primary as forms of writing [@Goody_1986], and if list-making and its later variants (e.g. tables) precede discursive and narrative writing practices, then we might expect lists to function as powerful social ordering devices. As literary scholars suggest (see [@Mainberger_2003]), although lists have often been de-valued as literary forms, list-making often appears, even in literary form, whenever writing seeks to address, name, group or evoke totality, profusion, excess or abundance. From both  anthropological and literary perspectives, shopping lists have excellent reasons to exist: they are deeply rooted in urban social formations historically and culturally. Lists such as online grocery recommendations weave together people, infrastructures, things, places and predictions.[^1.456]    
+Lists have long interested historians, anthropologists, sociologists, literary and media theorists. If, as the social anthropologist Jack Goody argued, lists are historically primary as forms of writing [@Goody_1986], and if list-making and its later variants (e.g. tables) precede discursive and narrative writing practices, then we might expect lists to function as powerful social ordering devices. As literary scholars suggest (see [@Mainberger_2003]), although lists have often been de-valued as literary forms, list-making often appears, even in literary form, whenever writing seeks to address, name, group or evoke totality, profusion, excess or abundance. More recent sociological work on lists (see [@deGoede_2016] for an oveview) confirms the potency of lists as ordering devices. From both  anthropological and literary perspectives, shopping lists have excellent reasons to exist: they are deeply rooted in urban social formations historically and culturally. Lists such as online grocery recommendations weave together people, infrastructures, things, places and predictions.[^1.456]    
 
 [^1.456]: While lists intersect strongly with other meaning and sense-making practices in everyday life and popular culture, they can be refractory to discourse  and textual analysis methods built around models of language or speech, with its rules of syntax and grammar. On the one hand, lists are highly associative. They can be interpreted or decoded semiotically, although they exhibit  variations in textuality -- how they are written and read -- that thwart semiotic readings. On the other hand, as operational inscriptions, they can be treated ethnomethodologically, as the production of social order in a given setting. 
 
-We might, in the light of their mutability, permeability and embedding in social order,   approach lists from various theoretical angles -- as asignifying semiotics as Maurizio Lazzarato calls it in his _Signs and Machines_ [@Lazzarato_2014] or as elements in 'a new order of spatio-temporal continuity for forms of economic, political and cultural life' as Celia Lury puts it in her account of topological turn [@Lury_2012]. In this paper, I focus on lists and list-making in terms of the predictive conditions of contemporary media experience [@Hansen_2015a].
+We might, in the light of their mutability, permeability and embedding in social order,  approach lists from various theoretical angles -- as asignifying semiotics as Maurizio Lazzarato calls it in his _Signs and Machines_ [@Lazzarato_2014] or as elements in 'a new order of spatio-temporal continuity for forms of economic, political and cultural life' as Celia Lury puts it in her account of topological turn [@Lury_2012]. In this paper, I focus on lists and list-making in terms of the predictive conditions of contemporary media experience [@Hansen_2015a].
 
+HERE 
 All lists are forms of order. Mathematicians distinguish lists from sets on the basis of order. Formally, both lists and sets are collections, but a list also contains a mapping of its elements to an ordering, usually the natural or counting numbers. Sometimes this order is explicit. Numbers are written down one side of the list. Often the order is implicit to the spatial arrangement of the list.  Even random order can be  operationally important (for instance, in gambling machine or a psychology experiment, randomly order lists might be important).  Mappings between list order and social order are manifestly highly contingent. Listing practices in a given social setting, however, always index its engagement with necessary unstable dynamics of social order. From the perspective of social order, shopping lists, as they are co-constructed by a supermarket chain's recommender system, might be important intersectional zones for the conversion of the average everydayness of lists through data-analytic propensities. 
 
-
-Mark Hansen has recently suggested, 
+The media theorist Mark Hansen has recently suggested that 
 
 > predictive analytics are discoveries of micrological propensities that are not directly correlated with human understanding and affectivity and that do not by themselves cohere into clearly identifiable events [@Hansen_2015a, 111-112]
 
-The question exercising much contemporary work on data, on media, platforms and finance pivots on the 'micrological propensities' that might be re-ordering lists. Hansen's argues that these propensities make probabilities into something real, some actually in things:  
+This assertion resonates with many accounts of big data.  The expectation exercising much contemporary work on data, on media, platforms and finance pivots on 'micrological propensities' that might only become evident given enough data.  Hansen argues that an ontological transformation links the micrological propensities of things in the world to prediction:
 
 >Whatever explanatory and causal value predictive analytics of large datasets have is, I suggest, ultimately rooted in this ontological transformation whereby probabilities are understood to be expressions of the actual propensity of things [@Hansen_2015a, 120] 
 
-Hansen predicates prediction as an 'ontological transformation' transforming the relation between probabilities and things.  The practical and indeed empirical  question is whether such transformations in probability that bring 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and  shopping baskets. 'Conversion' might be a preferable term for these changes.  It highlights a range of re-orientations in subjects, experience, things, numbers and structures  entailed more than the subjective 'understood-to-be-expressed' formulation that Hansen emphasises.
+Hansen predicates prediction as an 'ontological transformation' thata ffects probabilities. It links probabilities as calculations to propensities or the mutable agencies of things. The practical and indeed empirical  question is whether such transformations in probability that bring 'the propensities of things'  can be detected and articulated in the prosaic setting of shopping lists and  recommendations. I will argue that 'conversion' is a preferable term for these changes.  It highlights  re-orientations in subjects, experience, things, numbers and structures that ranges more widely than Hansen's subjective 'understood-to-be-expressed' formulation.
 
-## DunnHumby's work for Tesco
+## Conversion events: DunnHumby's work for Tesco
 
-In one of the many industry-meets-academia events occurring in increasingly data science-oriented higher education institutions in the UK, speakers from industry, government and commerce described their work.[^11.1] Shreena Patel, a PhD graduate in statistics and operations research,  works as a data scientist for DunnHumby, a well-known [ customer science company ](https://www.dunnhumby.com/)  focusing on online grocery shopping at Tesco.  Speaking to an audience of statisticians and operations researchers, Patel   focused on the models underlying  shopping list recommendations. Her presentation was filled with graphs, numbers, and tables concerning different aspects of the 'Have you forgotten?' recommender system. Patel's presentation was not sociological. In order to explore the operational environment she described, and its predictive operations, I will reconstruct key features of her presentation using sample data drawn from the Tesco API ([Application Programmer Interface](https://devportal.tescolabs.com/docs/services/56c73b1bf205fd0ed81dbe7a/operations/56d5b2bee2813e0a0053c47c), [@Tesco.com_2017])  A sample of the most highly priced items in Tesco stores is shown in Table  \@ref(tab:expensive-groceries) and a range of data science, statistics and graphics libraries implemented in the widely-used statistical programming language `R` [@RDevelopmentCoreTeam_2010].[^11.2] 
+In one of the many industry-meets-academia events occurring in increasingly data science-oriented higher education institutions in the UK, speakers from industry, government and commerce described their work with predictive modles.[^11.1] Shreena Patel, a PhD graduate in statistics and operations research,  works as a data scientist for DunnHumby, a well-known [ customer science company ](https://www.dunnhumby.com/). Her work focuses on online grocery shopping at the supermarket chain Tesco.  Speaking to an audience of statisticians and operations researchers, Patel   focused on the models underlying  shopping list recommendations. Her presentation was filled with graphs, numbers, and tables concerning different aspects of the 'Have you forgotten?' recommender system. Patel's presentation was not sociological. In order to explore the operational environment she described, and its predictive operations, I will reconstruct key features of her presentation using sample data drawn from the Tesco API ([Application Programmer Interface](https://devportal.tescolabs.com/docs/services/56c73b1bf205fd0ed81dbe7a/operations/56d5b2bee2813e0a0053c47c), [@Tesco.com_2017])  A sample of the most highly priced items in Tesco stores is shown in Table  \@ref(tab:expensive-groceries) and a range of data science, statistics and graphics libraries implemented in the widely-used statistical programming language `R` [@RDevelopmentCoreTeam_2010].[^11.2] 
 
 [^11.1]: More than 100  Data Science Institutes have been set up in North America, Europe and UK since around 2012. The traffic between higher education and data analytics in industry is intense and flows in several forms: people funding, research findings, software and technical devices (code) and training. 
 
@@ -206,7 +208,7 @@ Patel introduced the relevancy model with a graph familiar to machine learning a
 
 The models Patel so briefly mentioned are all classifiers, predictive models that spatially order  variables in a dataset as a high dimensional vector space. In the vector space, classification means drawing a decision boundary between points that henceforth belong to different classes of things [@Mackenzie_2015]. Here the classes of things are binary: `recommended` or `not recommended,` and for many of the models shown in the graph, membership of a class is expressed as a probability.  The logistic regression model generates probabilities for each product for each customer. Patel did not articulate the implication of the contrast between the left and right hand side of the graphic. Although the statistical framing appears explicitly (e.g. in measuring the precision of  recommender systems), the underlying shift to a statistical model is barely mentioned. In becoming predictive, the 'Have You Forgotten?' recommendations have included a version of the social in the form of a  model that seeks to identify relations between variables.  The relevance of recommendations pivots on the apprehension of social order by a model. 
 
-## 7. Sparsity: output 20 recommendations from 200,000 products
+## Sparsity: output 20 recommendations from 200,000 products
 
 Note that neither the infrastructure that marshals the Tesco customer data  - Patel will mention `Hadoop` -- nor the predictive analytic device -- the logistic regression model -- loom very large in the conversion of the recommender system. 'Most of the gain comes,' Patel observes, 'from thinking of good features.' While this is almost a truism in big data practice (see, for instance, [@Domingos_2012]), what counts as a good feature in a shopping list? 
 
@@ -264,21 +266,21 @@ Whereas the association rule-based recommender system focused on thing-thing com
 
 How could the recommender system sense the possible substitutions and complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries might be shaped by wider social groups, orderings and circumstances?  Patel's comments on this were very brief but suggest that the 'Have You Forgotten?' list becomes an increasingly mutable entity, open to many substitutions and intensive re-writings. Like the mention of `hadoop`, what Patel said about substitution and complementarity draws on extensive but relatively well-established data practices. She mentioned,  for instance,  a 'design matrix of 14,000 columns' and the use of '`L1 regularization` to drive coefficients down to zero' in a new feature of the model called 'self-learning substitutes,' a model that examines the recommendation list and predicts substitutes and complementarities for 'all products' in the list. The 'self learning substitutes' feature of the relevancy model draws on another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response'). A customer's recommendation list might already include `Tesco Ginger Nuts 300g.`   The 'self-learning substitution model' might be able to substitute something in that list that is of higher value, either because it is bigger or more expensive: `Mcvitie's Ginger Moments 400g.` What is being modelled here? No longer whether to recommend a product to a customer or not, but whether something could be substitute or complement  what is already in the recommendation list.
 
-Similarly, modelling complementarities between things for a particular person entails a matrix of comparisons. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella.` How should we understand the effect of complementarity? From the standpoint of selling more things, Patel emphasises that 'complementarity drives conversion.' Bringing the matrix of similarities expressed as numerical associations between products into the model improves the conversion of recommendations into purchases. From the standpoint of a social ordering that identifies people and things as propensities, complementarities suggest another possible outcome. What does it mean for our sense of social order if the relations between things shift in accordance with our experience of the world? At base, there is no ontological transformation here, but an inclusion of some part of the world into the model.    In the similarity matrix, shaped by the history of past recommendations and purchases made by this customer, the propensities of things drive down the surplus of sensibility associated with what people want.  
+Similarly, modelling complementarities between things for a particular person entails a matrix of comparisons. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella.` How should we understand the effect of complementarity? From the standpoint of selling more things, Patel emphasises that 'complementarity drives conversion.' Bringing the matrix of similarities expressed as numerical associations between products into the model improves the conversion of recommendations into purchases. From the standpoint of a social ordering that identifies people and things as propensities, complementarities suggest another possible outcome. What does it mean for our sense of social order if the relations between things shift in accordance with our experience of the world? At base, there is no ontological transformation here, but an inclusion of some part of the world into the model.  In the similarity matrix, shaped by the history of past recommendations and purchases made by this customer, the propensities of things drive down the surplus of sensibility associated with what people want.  
 
 ## Conclusion
 
-In their intersection with mundane practices of ordering, recommender systems offer some guidance to the ways that predictive practices affect existing  forms of social order in the world. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of contingencies and conditionalities, warping over time.  HERE Following Hansen, I have been suggesting that the predictive listing in the form of open-ended recommendation is symptomatic of changes in social order. The idea that media should no longer be considered as extensions or prostheses of human communication but the environmental situation in which different propensities play out is increasingly central to contemporary media theory. 
+In their intersection with mundane practices of ordering, recommender systems offer some guidance to the ways that predictive practices affect existing  forms of social order in the world. Rather than directly positing an ontological transformation, I have explored some of the practices of conversion associated with a shift from a data-mining rule-based system to a predictive recommender system. The DunnHumby model and the Tesco 'Have You Forgotten?' recommendations present many of the traits of the conversion processes associated with big data. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of contingencies and conditionalities, warping over time. 
 
-Hansen refers to an ontological transformation in which predictive media or recommender systems would be seen as the closed realisation of the actually open propensities of the world. By understanding the world in terms of propensities, he argues, we have a change to engage with contemporary predictive media. 
+Following Hansen, I have been suggesting that the predictive listing in the form of open-ended recommendation is symptomatic of changes in social order. 
+Predictive media or recommender systems would be seen as the closed realisation of the  open propensities of the world. By understanding the world in terms of propensities, he argues, we have a chance  to engage with contemporary predictive processes in ways that both acknowledge their relentless and exhausting pressure to consume more and retain some chance of inhabiting the world differently. 
 
-I have not explored the Whitehead-derived philosophy of propensities in the world that he develops there, only because I am not sure that we need speculative theory to grapple with the material practices of prediction. Already in the DunnHumby model and the Tesco 'Have You Forgotten?' recommendations, many of the traits of predictive processes are at work. 
+I diverge from Hansen in accounting for this change. Rather than looking for a speculative theory that sets out a world in which prediction would be the closed form of an ontologically open world ('the propensities of things'), we might understand the predictive conversion as constitutively incomplete. Shopping lists  exemplify this incompleteness and ineradicable openness of prediction.  The constitutive incompleteness and openness of lists are very closely entangled with problems of social order amidst predictive operations. Lists undergoing a 'conversion' experience as they become more probabilistic, but their heterogeneous character as operations caught up in models, infrastructures, experiments, and the flow of commodities means that they can never form a closed set or dataset. The problem of 'constructing good features,' a problem that any predictive model must address, persists as the site of experiment with structures that lack closure. A constitutive openness to new associations, new combinations, new groupings or actors is integral to the conversion event. 
 
-I diverge from Hansen in how I account for this change. Rather than looking for a speculative theory that sets out a world in which prediction would be the closed form, 
+In their account of the Netflix recommender system, Ted Hallinan and Peter Striphas make the following argument:
 
-- the **constitutive incompleteness** and openness of lists are very closely entangled with problems of social order under predictive conditions or amidst predictive operations. 
-- shopping lists have complex temporal-material structure, since they mix prediction, infrastructural constraints, the individual characteristics of list-makers, statistical validations, database architectures and above all the **surplus sensibility** associated with  circulation of commodities.
-- shopping lists undergoing a **conversion experience** as they become more probabilistic, but the idea that probabilities are the closed form of propensities does not account for the distribution of probabilities in relations between things, between people, between people and things, and between things and people.
-- lists undergoing a 'conversion' experience as they become more probabilistic, but their heterogeneous character as operations caught up in models, infrastructures, experiments, and the flow of commodities means that they can never form a closed set or dataset. Amidst prediction they become constitutively incomplete. 
+> These systems, and more importantly their algorithms, play a critical role in deciding which articles (or parts thereof) gain admission to the cultural realm, and in what form. Their doing so thus points in the direction of another universe of reference—a court of algorithmic appeal in which objects, ideas, and practices are heard, cross-examined, and judged independently, in part, of human beings [@Hallinan_2014, 13]
+
+The 'universe of reference' includes objects, ideas and practices mingle. Something similar happens in the Dunnhumby relevance model. In the customer-product association matrix, in the product-product similarity matrix, in the 14,000 variables included in the logistic regression model, a 'universe of reference' takes shape. The shopping list, as a result, take on a complex temporal-material structure that mixes prediction, infrastructural constraints, the individual characteristics of list-makers, statistical validations, database architectures and above all the **surplus sensibility** associated with  circulation of commodities. Shopping lists undergoing a **conversion experience** as they become more probabilistic, but the idea that probabilities are the closed form of propensities does not account for the distribution of probabilities in relations between things, between people, between people and things, and between things and people.
 
 ## References
